# energy-price-forecasting-mlops

./: .gitignore  Dockerfile.api  EDA_for_transformed_and_raw_data.ipynb  README.md  docker-compose.yml  main.py  pyproject.toml  test_api.py  test_load.py  test_model.py
predictions/: output.csv
src/: api.py  check_data.py  ingest_data.py  ingest_generation.py  ingest_load.py  predict.py  train.py  transform_data.py  validate_features.py
